# 5_queue_stack

./: CMakeLists.txt  README.md  classes.cpp  classes.h  main.cpp
src/: classes.cpp  classes.h
tests/: ts1.cpp
